Updated version of the repository

--- a/HelloWord.Rmd
+++ b/HelloWord.Rmd
@@ -2,7 +2,9 @@
 title: "HelloWorld"
 author: "Daniel Silva"
 date: "2022-09-12"
-output: pdf_document
+output:
+  word_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
